# timecapsule

./: .gitignore  README.md  pyproject.toml
capsule/: __init__.py  daemon.py  git_ops.py  narrator.py  store.py  tui.py  watcher.py
scripts/: generate_demo.py  smoke_test.py  test_daemon.py
